--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<link rel="manifest" href="/Bernio/manifest.webmanifest?v=2025-09-55">
+<link rel="manifest" href="/Bernio/manifest.webmanifest?v=2025-09-56">
 <meta name="apple-mobile-web-app-title" content="Bernio">
 <title>Bernio</title>
 <style>
@@ -190,6 +190,8 @@ body.exam-on .calc{
         <span class="badge always" id="bDRG">DEG</span>
         <span class="badge auto" id="bDMS">DMS</span>
         <span class="badge auto" id="bENG">ENG</span>
+        <span class="badge auto" id="bFIX">FIX</span>
+        <span class="badge auto" id="bSCI">SCI</span>
         <span class="badge auto" id="bMem">M</span>
         <span class="badge auto" id="bExamTimer"></span>
         <span class="badge auto" id="bExamCode" style="margin-left:auto"></span>
@@ -317,7 +319,8 @@ window.addEventListener('orientationchange', fitToViewport);
 
 /* ===== stav ===== */
 const exprEl=qs('#expr'), resEl=qs('#res');
-const bShift=qs('#bShift'), bAlpha=qs('#bAlpha'), bHyp=qs('#bHyp'), bDRG=qs('#bDRG'), bENG=qs('#bENG'), bDMS=qs('#bDMS'), bMem=qs('#bMem');
+const bShift=qs('#bShift'), bAlpha=qs('#bAlpha'), bHyp=qs('#bHyp'), bDRG=qs('#bDRG'), bENG=qs('#bENG'), bDMS=qs('#bDMS'), bMem=qs('#bMem'),
+      bFIX=qs('#bFIX'), bSCI=qs('#bSCI');
 const calcEl = document.getElementById('calc');
 const TEACHER_URL = "https://berniocal.github.io/Bernio/teacher.html"; // jediný zdroj pravdy
 const API_BASE = "https://examqr.jendabernard.workers.dev";
@@ -355,41 +358,47 @@ function renderModeMenu(){
   if (state.modeStage === 11) return setMenu(['COMP','SD','REG']);
   if (state.modeStage === 12) return setMenu(['Deg','Rad','Gra']);
 if (state.modeStage === 13) return setMenu(['Fix','Sci','Norm']);
+if (state.modeStage === 130) {
+  // Zadávací řádek: Fix 0~9? uprostřed; výsledkový řádek prázdný (jen drží výšku)
+  exprEl.innerHTML =
+    '<div class="modebar">' +
+      '<span class="label"></span>' +
+      '<span class="label">Fix 0~9?</span>' +
+      '<span class="label"></span>' +
+    '</div>';
+  resEl.classList.add('mode');
+  resEl.innerHTML = ''; // nic dole
+  return true;
+}
 
 if (state.modeStage === 131) {
-  // Zadávací řádek: "Norm 1~2?" uprostřed; ve výsledkovém řádku nic
+  // Zadávací řádek: "Norm 1~2?" uprostřed; ve výsledkovém řádku NIC
   exprEl.innerHTML =
     '<div class="modebar">' +
       '<span class="label"></span>' +
       '<span class="label">Norm 1~2?</span>' +
       '<span class="label"></span>' +
     '</div>';
+
+  // Výsledkový řádek schválně prázdný (bez 1/2/3); volí se přes hlavní číselná tlačítka
   resEl.classList.add('mode');
-  resEl.innerHTML = '<div class="numrow"><span>1</span><span>2</span><span></span></div>';
-  const row = resEl.querySelector('.numrow');
-  if (row){
-    // 1 a 2 jsou klikací
-    [0,1].forEach(i=>{
-      const el = row.children[i];
-      el.style.cursor='pointer';
-      el.addEventListener('pointerdown',(ev)=>{ ev.preventDefault(); handleMenuChoice(String(i+1)); },{passive:false});
-    });
-  }
+  resEl.innerHTML = '';
+
   return true;
 }
+
 if (state.modeStage === 132) {
-  // Zadávací řádek: "Sci 0~9?" uprostřed; čísla volíš běžnými tlačítky 0–9
   exprEl.innerHTML =
     '<div class="modebar">' +
       '<span class="label"></span>' +
       '<span class="label">Sci 0~9?</span>' +
       '<span class="label"></span>' +
     '</div>';
-  // jen držíme výšku spodního řádku
   resEl.classList.add('mode');
-  resEl.innerHTML = '<div class="numrow"><span>0</span><span>1</span><span>2</span></div>';
+  resEl.innerHTML = ''; // nic dole
   return true;
 }
+
 
 
   // ==== PŮVODNÍ stránky (ponecháváme kvůli mini-promptu DRG>) ====
@@ -420,29 +429,30 @@ function handleMenuChoice(digit){
     return true;
   }
 if (state.modeStage === 13){
-  // 1=Fix (zatím neřešíme), 2=Sci → "Sci 0~9?", 3=Norm → "Norm 1~2?"
-  if (digit === '2'){
-    state.modeStage = 132; // Sci prompt
-    render();
-  } else if (digit === '3'){
-    state.modeStage = 131; // Norm prompt
-    render();
-  } else {
-    state.modeStage = 0;   // Fix teď neřešíme
-    render();
-  }
+  // 1=Fix → 130, 2=Sci → 132, 3=Norm → 131
+  if (digit === '1'){ state.modeStage = 130; render(); }
+  else if (digit === '2'){ state.modeStage = 132; render(); }
+  else if (digit === '3'){ state.modeStage = 131; render(); }
+  else { state.modeStage = 0; render(); }
   return true;
 }
+
 
 if (state.modeStage === 131){
   if (digit === '1') state.norm = 1;
   else if (digit === '2') state.norm = 2;
-  // nic nevypisujeme na displej – jen zavřít menu
-   saveNorm();
+
+  // Norm vypíná Fix/Sci
+  state.fix = null;
+  state.sci = null;
+  saveFixSci();
+
+  saveNorm();
   state.modeStage = 0;
   render();
   return true;
 }
+
 if (state.modeStage === 132){
   // Sci 0~9? → 0 = deset platných číslic
   const n = Number(digit);
@@ -461,7 +471,29 @@ if (state.modeStage === 132){
     state.modeStage = 0; render();
     return true;
   }
+if (state.modeStage === 130){
+  // Fix 0~9? → přesně n desetinných míst; 0..9
+  if (/^[0-9]$/.test(digit)) {
+    state.fix = Number(digit);   // 0..9
+    state.sci = null;            // FIX a SCI jsou exkluzivní
+    saveFixSci();
+  }
+  state.modeStage = 0;
+  render();
+  return true;
+}
 
+if (state.modeStage === 132){
+  // Sci 0~9? → 0 = 10 platných číslic
+  if (/^[0-9]$/.test(digit)) {
+    state.sci = Number(digit);   // uložíme 0..10 (0 = 10)
+    state.fix = null;            // exkluzivní vůči FIX
+    saveFixSci();
+  }
+  state.modeStage = 0;
+  render();
+  return true;
+}
   // === PŮVODNÍ stránky (ponechané) ===
   if(state.modeStage===1){
     if(digit==='1') state.drg='DEG';
@@ -626,7 +658,7 @@ const Exam = (() => {
 
 <script>
 let state={
-   raw:'', cursor:0, ans:0, drg:'DEG', shift:false, alpha:false, hyp:false, eng:false, norm: 1,  // 1 = Norm1, 2 = Norm2
+   raw:'', cursor:0, ans:0, drg:'DEG', shift:false, alpha:false, hyp:false, eng:false, norm: 2,  // 1 = Norm1, 2 = Norm2
   fix: null,            // FIX: počet desetinných míst (null = vypnuto)
 sci: null,  
   dmsDisplay:false, frac:false, fracMixed:true, fracPrefMixed:true, memory:0, memOn:false,
@@ -636,13 +668,13 @@ sci: null,
   lastPercentCtx:null       // { Araw,Braw, op, A, B } uložené po A×B%          // <<< přidáno
 };
 const NORM_KEY = 'bernio.norm.v1';
-  const FIX_KEY = 'bernio.fix.v1';
+const FIX_KEY = 'bernio.fix.v1';
 const SCI_KEY = 'bernio.sci.v1';
 
 function saveFixSci(){
   try{
-    localStorage.setItem(FIX_KEY, state.fix == null ? '' : String(state.fix));
-    localStorage.setItem(SCI_KEY, state.sci == null ? '' : String(state.sci));
+    localStorage.setItem(FIX_KEY, state.fix == null ? '' : String(Math.max(0, Math.min(9, state.fix|0))));
+    localStorage.setItem(SCI_KEY, state.sci == null ? '' : String(Math.max(0, Math.min(10, state.sci|0))));
   }catch(_){}
 }
 function loadFixSci(){
@@ -650,9 +682,11 @@ function loadFixSci(){
     const fx = localStorage.getItem(FIX_KEY);
     const sc = localStorage.getItem(SCI_KEY);
     state.fix = (fx === '' || fx === null) ? null : Math.max(0, Math.min(9, +fx|0));
-    state.sci = (sc === '' || sc === null) ? null : ( (+sc|0) === 0 ? 10 : Math.max(1, Math.min(10, +sc|0)) );
+    // Sci: 0 znamená 10 platných číslic – interně si klidně ponecháme 0; při formátování to přepočteme na 10
+    state.sci = (sc === '' || sc === null) ? null : Math.max(0, Math.min(10, +sc|0));
   }catch(_){}
 }
+
 
 
 function saveNorm(){
@@ -707,8 +741,12 @@ function render(){
   bENG.classList.toggle('on',state.eng);
   bDMS.classList.toggle('on',state.dmsDisplay);
   bMem.classList.toggle('on',state.memOn);
+      if (bFIX) bFIX.classList.toggle('on', state.fix != null);
+  if (bSCI) bSCI.classList.toggle('on', state.sci != null);
+
   bDRG.textContent=state.drg;
   calcEl.classList.toggle('shift-on', state.shift);
+
 
   if(renderModeMenu()){
     return;
@@ -1731,16 +1769,18 @@ function toScientificAuto(x){
   }
   return `<span class="sci">${mant}<span class="times">×</span><span class="ten">10</span><sup class="exp">${e}</sup></span>`;
 }
-  function toScientificSig(x, sig=10){
+  
+function toScientificSig(x, sig=10){
   if(!isFinite(x)) return String(x);
   if(x===0) return '0';
-  const s = Number(sig)||10;            // 1–10 platných číslic
-  const sci = x.toExponential(Math.max(0, s-1));   // např. "1.234e+5"
+  const s = Math.max(1, Math.min(10, sig|0));
+  const sci = x.toExponential(s-1);  // např. "3.3e-1"
   const [mStr, eStr] = sci.split('e');
-  const mant = stripZeros(mStr);
+  const mant = mStr;                  // u SCI nuly NEodřezáváme
   const e = parseInt(eStr, 10);
   return `<span class="sci">${mant}<span class="times">×</span><span class="ten">10</span><sup class="exp">${e}</sup></span>`;
 }
+
 
 function toFractionStr(x, mixed=true, maxDen=1e6){
   if(!isFinite(x)) return String(x);
@@ -1785,19 +1825,25 @@ function dmsToDeg(d,m,s){ const sign=d<0?-1:1; d=Math.abs(d); return sign*(d+m/6
 function formatNumWithOptions(v){
   if(!isFinite(v)) return String(v);
 
-  // DMS / ENG / FRAC mají přednost – to ponecháváme beze změny
-  const x = roundSig(v,12);
+  const xRaw = +v;                 // surové číslo pro FIX/SCI
+  const x    = roundSig(v,12);     // „uhlazené“ pro Norm/DMS/ENG/FRAC
+
+  // DMS / ENG / FRAC
   if(state.dmsDisplay) return degToDMS(x);
   if(state.eng)        return toEngineering(x);
   if(state.frac)       return toFractionStr(x,state.fracMixed);
-  // --- FIX / SCI mají přednost před Norm ---
-// FIX: pevný počet desetinných míst
-if (state.fix != null) {
-  return stripZeros(x.toFixed(Math.max(0, Math.min(9, state.fix|0))));
-}
-// SCI: počet platných číslic (1–9; 0 = 10)
-if (state.sci != null) {
-  return toScientificSig(x, state.sci === 0 ? 10 : state.sci);
+
+  // FIX / SCI (použij xRaw)
+  if (state.fix != null) {
+    const n = Math.max(0, Math.min(9, state.fix|0));
+    return xRaw.toFixed(n);
+  }
+  if (state.sci != null) {
+    const n = (state.sci|0) === 0 ? 10 : Math.max(1, Math.min(10, state.sci|0));
+    return toScientificSig(xRaw, n);
+  }
+
+  // ... dál Norm 1/2 logika s 'x'
 }
 
 
@@ -2380,16 +2426,5 @@ function stop(){
 function startExamScan(){ QR.start('START'); }
 function endExamScan(){   QR.start('END'); }
 </script>
-
-
-
 </body>
 </html>
-
-
-
-
-
-
-
-
